Adding color schemes in comments

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /* https://mycolor.space/?hex=%23101E38&sub=1 */
 
+/* color-yellow: #8e9295
+	color-blue-light: #82b4d7;
+	color-blur-light-two: #2a669b;
+*/
+
 /* General styles */
 body {
   background-color: #101e38;
